--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "swiper": "^6.8.4",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
